# LLParser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/asmParser/: instFlags.cpp  instFlags.h  instParser.cpp  instParser.h  irBuilder.cpp  irBuilder.h  irParser.cpp  irParser.h  llParser.cpp  llParser.h  llParserTLS.cpp  llParserTLS.h  sysDict.cpp  sysDict.h
src/di/: debugInfo.cpp  diCompositeType.h  diEssential.h  diFile.cpp  diFile.h  diLexicalBlock.cpp  diLexicalBlock.h  diLexicalBlockFile.cpp  diLexicalBlockFile.h  diLocation.cpp  diLocation.h  diScope.cpp  diScope.h  diSubprogram.cpp  diSubprogram.h  diType.h
src/inst/: allocaInst.cpp  allocaInst.h  bitcastInst.cpp  bitcastInst.h  branchInst.cpp  branchInst.h  callInst.cpp  callInst.h  callInstFamily.cpp  callInstFamily.h  getelementptrInst.cpp  getelementptrInst.h  instEssential.h  instFlags.cpp  instFlags.h  invokeInst.cpp  invokeInst.h  loadInst.cpp  loadInst.h  storeInst.cpp  storeInst.h
src/ir/: alias.cpp  alias.h  attribute.cpp  attribute.h  basicBlock.cpp  basicBlock.h  comdat.cpp  comdat.h  function.cpp  function.h  globalVariable.cpp  globalVariable.h  instruction.cpp  instruction.h  irEssential.h  metaData.cpp  metaData.h  module.cpp  module.h  shadow.cpp  shadow.h  structType.cpp  structType.h  type.cpp  type.h  value.cpp  value.h
src/ir/di/: debugInfo.h  diCompositeType.cpp  diLexicalBlock.h  diLexicalBlockFile.h  diLocation.cpp  diLocation.h  diScope.cpp  diScope.h  diSubprogram.cpp  diSubprogram.h  diType.cpp
src/passes/: InterModularPass.cpp  InterModularPass.h  pass.cpp  pass.h  passManager.cpp  passManager.h
src/peripheral/: FileParser.cpp  FileParser.h  argsParser.cpp  argsParser.h  optParser.cpp  optParser.h  stringParser.cpp  stringParser.h  sysArgs.cpp  sysArgs.h  timer.cpp  timer.h
src/transform/: CMake.config  CMake.indi  CMake.shared
src/transform/add-declare/: addDeclare.cpp
src/transform/atrace/: atrace.cpp
src/transform/ben-alloc/: benAlloc.cpp
src/transform/call-clone/: callClone.cpp  callClone.h  callClone1.cpp  callClone2.cpp  callCloneTest.cpp  contextGenerator.cpp  contextGenerator.h
src/transform/call-clone/deprecated/: callClone.cpp
src/transform/call-graph/: callGraph.cpp
src/transform/examples/: CMakeLists.txt  exampleModulePass.cpp  examplePasses.cpp
src/transform/global-pass-hello/: globalHello.cpp
src/transform/guided-clone/: guidedClone.cpp
src/transform/hello/: CMakeLists.txt  hello.cpp
src/transform/hot-call-clone/: hotCallClone.cpp  hotCallClone1.cpp  hotCallClone2.cpp  hotCallClone3.cpp
src/transform/hot-call-path/: hotCallPath.cpp
src/transform/include-trace/: main.cpp
src/transform/instcount/: instcount.cpp
src/transform/inter-call-clone/: interCallClone.cpp
src/transform/lbr/: lbr.cpp
src/transform/link-trace/: linkTrace.cpp  linkTrace1.cpp
src/transform/lsda/: lsda.cpp  lsda.h
src/transform/malloc/: nmalloc.cpp
src/transform/new-clone/: newClone.cpp
src/transform/path-clone/: pathClone.cpp
src/transform/print-caller/: printCaller.cpp
src/transform/print-function/: printFunction.cpp
src/transform/raw-replace-call/: rawReplaceCall.cpp
src/transform/split-module/: splitModule.cpp
src/transform/test/: addPrintf.cpp
src/transform/tests/: CMakeLists.txt  addPrintf.cpp  ctxVar.cpp  wrf.cpp
src/utilities/: flags.cpp  flags.h  internalError.cpp  internalError.h  macros.cpp  macros.h  mutex.cpp  mutex.h  strings.cpp  strings.h  symbol.cpp  symbol.h  systems.cpp  systems.h
test/call/: call.c  callGraph.c
test/class/: hello.cpp
test/clone/: alloc-guide.txt  clone.c  clone.ll.malloc  clone.ll3.4  clone1.c  clone1.ll.callClone  clone1.ll.hotCallClone  clone1.ll.malloc  clone2.c  clone3.c  clone3.ll.callClone  clone3.ll.malloc  hotset.txt  new.callClone
test/csapp/: exchange.c
test/fortran/: ComputeList.o.ll.malloc  a.ll.malloc  alloc-guide.txt  shell_lam.fppized.o.ll.malloc  shell_lam.fppized.o.ll.o3
test/hotset/: bzip2_run_hotset.03-125.txt  gcc_run_hotset.03-125.txt  hot_filelines_ref_r2.txt  hot_filelines_ref_r5.txt  hot_filelines_ref_r6.txt
test/indirect/: direct_assignment.c  struct.c
test/linkage/: a.c  b.c  b.h  build.sh  tz
test/load/: stackaccess.c
test/memtrace/: a.c  tracer.h
test/newop/: new.cpp  openmp.cpp
